--- a/product page/productshirt.html
+++ b/product page/productshirt.html
@@ -14,7 +14,7 @@
 <body>
     <div class="scprodhead">
     <div>
-        <img src="/prodimg/bbs-image.svg" alt="Sale is Live">
+        <img src="./prodimg/bbs-image.svg" alt="Sale is Live">
     </div>
 <div class="scprodsale" >Big Bold Sale is live</div>
 <span class="scprodspan1"></span>
@@ -22,26 +22,28 @@
 </div>
 
 <!-- subheader over -->
+<div class="scbreadcumb">
+    <a href="#">  Home  </a>
+    <span>/</span>
+     <a href="#">Men</a>
+     <span>/</span>
+    <a href="#">Western Wear </a>
+     <span>/</span>
+     <a href="#">Jackets & Coats </a>
+    </div>
 <!-- maindiv start -->
 <div class="scmaindiv">
 
-<div class="scbreadcumb">
-<a href="#">  Home  </a>
-<span>/</span>
- <a href="#">Men</a>
- <span>/</span>
-<a href="#">Western Wear </a>
- <span>/</span>
- <a href="#">Jackets & Coats </a>
+
 
  <!-- subdiv 1 categories-->
 
 <div class="scsubdiv1"></div>
 
 <!-- subdiv 2 categories-->
-<div class="scsubdiv1"></div>
+<div class="scsubdiv2"></div>
 
-</div>
+
 
 </div>
 </body>
