--- a/Home/index.html
+++ b/Home/index.html
@@ -208,30 +208,139 @@
         </div>
       </div>
 
+      <div class="Show_the_space"></div>      
+      <div class="sameimgsamdiv sameimgheading"></div>
+    <div id="section_16" class="arrowsSilder">
+      <div class="Section_16_silder Section_arrows_silder responsive">
+        <div class="silder_no_hover">
+          <img src="../Home/Images/16 Secion silder img/1.webp" alt="">
+        </div>
+        <div class="silder_no_hover">
+          <img src="../Home/Images/16 Secion silder img/2.webp" alt="">
+        </div>
+        <div class="silder_no_hover">
+          <img src="../Home/Images/16 Secion silder img/3.webp" alt="">
+        </div>
+        <div class="silder_no_hover">
+          <img src="../Home/Images/16 Secion silder img/4.webp" alt="">
+        </div>
+        <div class="silder_no_hover">
+          <img src="../Home/Images/16 Secion silder img/5.webp" alt="">
+        </div>
+        <div class="silder_no_hover">
+          <img src="../Home/Images/16 Secion silder img/6.webp" alt="">
+        </div>
+        <div class="silder_no_hover">
+          <img src="../Home/Images/16 Secion silder img/7.webp" alt="">
+        </div>
+      </div>
+    </div>  
+
+
+
+    <div class="Show_the_space"></div>      
+      <div class="sameimgsamdiv sameimgheading"></div>
+
+      <div id="section_17">
+        <div class="section_17 sameimgsamdiv">
+          <img src="../Home/Images/17 section img.webp" alt="" />
+        </div>
+      </div>
+
+      <div id="section_17" class="arrowsSilder">
+        <div class="Section_16_silder Section_arrows_silder responsive">
+          <div class="silder_no_hover">
+            <img src="../Home/Images/17 sectin silder/1.jpg" alt="">
+          </div>
+          <div class="silder_no_hover">
+            <img src="../Home/Images/17 sectin silder/2.webp" alt="">
+          </div>
+          <div class="silder_no_hover">
+            <img src="../Home/Images/17 sectin silder/3.webp" alt="">
+          </div>
+          <div class="silder_no_hover">
+            <img src="../Home/Images/17 sectin silder/4.webp" alt="">
+          </div>
+          <div class="silder_no_hover">
+            <img src="../Home/Images/17 sectin silder/5.webp" alt="">
+          </div>
+        </div>
+      </div>  
+
 
 
       <div class="Show_the_space"></div>      
       <div class="sameimgsamdiv sameimgheading"></div>
+      <div id="section18">
+        <div class="section18 sameimgsamdiv">
+          <img src="../Home/Images/18.webp" alt="" />
+        </div>
+      </div>
+      <div id="section_18 " class="Fous_img_inDiv">
+        <div class="section_18_img sameimgsamdiv">
+          <img src="../Home/Images/18section 4/1.jpg" alt="" />
+        </div>
+        <div class="section_18_img sameimgsamdiv">
+          <img src="../Home/Images/18section 4/2.jpg" alt="" />
+        </div>
+        <div class="section_18_img sameimgsamdiv">
+          <img src="../Home/Images/18section 4/3.webp" alt="" />
+        </div>
+        <div class="section_18_img sameimgsamdiv">
+          <img src="../Home/Images/18section 4/4.webp" alt="" />
+        </div>
       </div>
 
 
 
+      <div class="Show_the_space"></div>      
+      <div class="sameimgsamdiv sameimgheading"></div>   
+
+      <div id="section_19">
+        <div class="section_19 Ten">
+          <div class="silder_no_hover">
+            <img src="../Home/Images/19  section slider/1.webp" alt="" />
+          </div>
+          <div class="silder_no_hover">
+            <img src="../Home/Images/19  section slider/2.webp" alt="" />
+          </div>
+          <div class="silder_no_hover">
+            <img src="../Home/Images/19  section slider/3.jpg" alt="" />
+          </div>
+          <div class="silder_no_hover">
+            <img src="../Home/Images/19  section slider/4.webp" alt="" />
+          </div>
+        </div>
+      </div>
+      <div id="section_19" class="arrowsSilder">
+        <div class="Section_19_silder Section_arrows_silder responsive">
+          <div class="silder_no_hover">
+            <img src="../Home/Images/20 sectio slider/1.webp" alt="">
+          </div>
+          <div class="silder_no_hover">
+            <img src="../Home/Images//20 sectio slider/2.webp" alt="">
+          </div>
+          <div class="silder_no_hover">
+            <img src="../Home/Images//20 sectio slider/3.webp" alt="">
+          </div>
+          <div class="silder_no_hover">
+            <img src="../Home/Images//20 sectio slider/4.webp" alt="">
+          </div>
+          <div class="silder_no_hover">
+            <img src="../Home/Images//20 sectio slider/5.webp" alt="">
+          </div>
+        </div>
+      </div>  
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+      <div class="Show_the_space"></div>      
+      <div class="sameimgsamdiv sameimgheading"></div>   
+      <div id="section21">
+        <div class="section18 sameimgsamdiv">
+          <img src="../Home/Images/21.webp" alt="" />
+        </div>
+      </div>
 
 
 
