--- a/Home/index.html
+++ b/Home/index.html
@@ -247,7 +247,7 @@
         </div>
       </div>
 
-      <div id="section_17" class="arrowsSilder">
+      <div id="section__17" class="arrowsSilder">
         <div class="Section_16_silder Section_arrows_silder responsive">
           <div class="silder_no_hover">
             <img src="../Home/Images/17 sectin silder/1.jpg" alt="">
@@ -312,7 +312,7 @@
           </div>
         </div>
       </div>
-      <div id="section_19" class="arrowsSilder">
+      <div id="section__19" class="arrowsSilder">
         <div class="Section_19_silder Section_arrows_silder responsive">
           <div class="silder_no_hover">
             <img src="../Home/Images/20 sectio slider/1.webp" alt="">
@@ -341,7 +341,44 @@
           <img src="../Home/Images/21.webp" alt="" />
         </div>
       </div>
+      <div class="section_21" class="Fous_img_inDiv">
+        <div class="sameimgsamdiv">
+          <img src="../Home/Images/lastsection22/1.webp" alt="" />
+        </div>
+        <div class="sameimgsamdiv">
+          <img src="../Home/Images/lastsection22/2.webp" alt="" />
+        </div>
+        <div class="sameimgsamdiv">
+          <img src="../Home/Images/lastsection22/3.webp" alt="" />
+        </div>
 
+      </div>
+      <div class="section_21" class="Fous_img_inDiv">
+        <div class="section_13_img sameimgsamdiv">
+          <img src="../Home/Images/lastsection22/4.webp" alt="" />
+        </div>
+        <div class="section_13_img sameimgsamdiv">
+          <img src="../Home/Images/lastsection22/5.webp" alt="" />
+        </div>
+        <div class="section_13_img sameimgsamdiv">
+          <img src="../Home/Images/lastsection22/6.webp" alt="" />
+        </div>
+
+      </div>
+      <div class="section_21" class="Fous_img_inDiv">
+        <div class="section_13_img sameimgsamdiv">
+          <img src="../Home/Images/lastsection22/7.webp" alt="" />
+        </div>
+        <div class="section_13_img sameimgsamdiv">
+          <img src="../Home/Images/lastsection22/8.webp" alt="" />
+        </div>
+        <div class="section_13_img sameimgsamdiv">
+          <img src="../Home/Images/lastsection22/9.webp" alt="" />
+        </div>
+        <div class="section_13_img sameimgsamdiv">
+          <img src="../Home/Images/lastsection22/10.webp" alt="" />
+        </div>
+      </div>
 
 
 
