--- a/Home/index.html
+++ b/Home/index.html
@@ -22,7 +22,53 @@
   </head>
   <body>
     <div id="main_div_all">
-      <div id="Nav_bar_main"></div>
+
+
+      <div id="Nav_bar_main">
+        <div class="nav_bar_all">
+        <div class="firstSectionOfNavBar">
+          <a href=""><p>Sign In / Join AJIO</p></a>
+          <a href=""><p>Customer Care</p></a>
+         <a  class="visitedib" href=""><p>Visit AJIOLUXE</p></a>
+        </div>
+        <div class="secondsectionnavbar">
+          <div class="left_section_img">
+            <div class="logo_img_div">
+              <img src="../Home/Images/Ajio-Logo.svg" alt="">
+            </div>
+          </div>
+          <div class="right_side_div">
+            <div class="text_div_secon_nav">
+              <p>MEN</p>
+            </div>
+            <div class="text_div_secon_nav">
+              <p>WOMEN</p>
+            </div>
+            <div class="text_div_secon_nav">
+              <p>KIDE</p>
+            </div>
+            <div class="text_div_secon_nav">
+              <p>INDIE</p>
+            </div>
+            <div class="text_div_secon_nav">
+              <p>HOME AND KITCHEN</p>
+            </div>
+            <div class="input_serach_div_secon_nav">
+              <div class="input_div_nav_bar">
+              <input type="text" placeholder="Search AJIO"><i class="fas fa-search"></i>
+            </div>
+              <div class="icon_hanger icon-bag-hang">
+                <img width="6%" src="../Home/Images/svg logo/imgonline-com-ua-ReplaceColor-GtXPguqsY2C-removebg-preview.png" alt="">
+              </div>
+              <div class="icon_bag_div icon-bag-hang">
+                <i class="fas fa-shopping-bag"></i>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+        </div>
+      </div>
 
       <div id="first_section">
         <div class="frist_section_img sameimgsamdiv">
@@ -380,10 +426,28 @@
         </div>
       </div>
 
+      <div class="Show_the_space"></div>      
+      <div id="section23">
+        <div class="section23 sameimgsamdiv">
+          <img src="../Home/Images/last img.webp" alt="" />
+        </div>
+      </div>
 
 
-
-
+      <div id="icon_div">
+        <div class="icons">
+          <i class="fas fa-shopping-bag"></i>
+          <p>EASY EXCHANGE</p>
+        </div>
+        <div class="icons">
+          <i class="fas fa-hand-holding-heart"></i>
+          <p>100% HANDPICKED</p>
+        </div>
+        <div class="icons">
+          <i class="far fa-check-circle"></i>
+          <p>ASSURED QUALITY</p>
+        </div>
+      </div>
 
 
 
