--- a/Signup&Login/signup.html
+++ b/Signup&Login/signup.html
@@ -66,10 +66,15 @@
            </div>
 
            <!-- submit Button -->
-           <button  onclick="signUp()" id = "btn">CONTINUE</button>
+           <div id = "btn1">
+            <button  onclick="signUp()" id = "btn">CONTINUE</button>
+            <a href="signIn.html"><button id = "btn">LOG-IN</button></a>
+           </div>
+           <!-- <button  onclick="signUp()" id = "btn">CONTINUE</button> -->
 
            <!-- Terms & Cond. -->
            <p class = "p">By Signing In, I agree to<span id = "color">Terms and Conditions.</span> </p>
+           <!-- <button id = "btn">LogIn</button> -->
     </div>
 </body>
 </html>
