--- a/Home/index.html
+++ b/Home/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../Home/Images/title logo.png" type="image/icon type">
-    <link rel="stylesheet" href="../Home/Main.css">
+    <link rel="stylesheet" href="../Main.css">
     <script
       src="https://kit.fontawesome.com/d829865ea3.js"
       crossorigin="anonymous"
@@ -427,5 +427,6 @@
     type="text/javascript"
     src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
   ></script>
+  <script type="module" src="../navbar.js"></script>
   <script type="module" src="../Home/Scripts/home.js"></script>
 </html>
