--- a/Home/index.html
+++ b/Home/index.html
@@ -16,7 +16,7 @@
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
     <link rel="stylesheet" href="./styles/slick-theme.css" />
-    <link rel="stylesheet" href="../Home/styles/home.css" />
+    <link rel="stylesheet" href="/Home/styles/home.css" />
     <title>
       Ajio.com | Shop Online the Latest Fashion in apparels brands in India |
       Reliance Ajio.com
