--- a/Home/index.html
+++ b/Home/index.html
@@ -428,5 +428,5 @@
     src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
   ></script>
   <script type="module" src="../navbar.js"></script>
-  <script type="module" src="../Home/Scripts/home.js"></script>
+  <script type="module" src="/Home/Scripts/home.js"></script>
 </html>
