--- a/Home/index.html
+++ b/Home/index.html
@@ -16,7 +16,7 @@
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
     <link rel="stylesheet" href="./styles/slick-theme.css" />
-    <link rel="stylesheet" href="/Home/styles/home.css" />
+    <link rel="stylesheet" href="./styles/home.css" />
     <title>
       Ajio.com | Shop Online the Latest Fashion in apparels brands in India |
       Reliance Ajio.com
@@ -428,5 +428,5 @@
     src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
   ></script>
   <script type="module" src="../navbar.js"></script>
-  <script type="module" src="/Home/Scripts/home.js"></script>
+  <script src="./Scripts/home.js"></script>
 </html>
