--- a/Signup&Login/signIn.html
+++ b/Signup&Login/signIn.html
@@ -50,7 +50,7 @@
         <input class="input" id="username" type="text" placeholder= "Enter UserName" ><br><br>
 
         <!-- <label>Enter Password</label><br> -->
-        <input class="input" id="password" type="text" placeholder="Enter Password" ><br><br>
+        <input class="input" id="password" type="password" placeholder="Enter Password" ><br><br>
 
 
         
@@ -91,10 +91,19 @@ let response = await fetch(url, {
 });
 
 let data = await response.json();
+// console.log("data", data);
 
 
-        goinghomepag(user)
 
+
+if(data.error === true){
+    alert("User Not Exist");
+} else{
+   goinghomepag(user);
+
+}
+
+        
 }
 
 
