--- a/About Us/we.html
+++ b/About Us/we.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="we.css">
+    <link rel="stylesheet" href="../Main.css">
+    <link rel="stylesheet" href="we.css" >
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body> 
+    <div id="Nav_bar_main">
+    </div>
     <div id = "main">
         <div id = "head">
             <p>Home  / Who We Are | About Us</p>
@@ -153,5 +156,9 @@
         </div>
         
     </div>
+    <footer></footer>
 </body>
+<script type = "module" src = "../navbar.js">
+
+</script>
 </html>
