--- a/About Us/we.html
+++ b/About Us/we.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script
+    src="https://kit.fontawesome.com/d829865ea3.js"
+    crossorigin="anonymous"
+  ></script>
+    <title>About us</title>
 </head>
 <body> 
     <div id="Nav_bar_main">
