product_css_changed

--- a/product page/productwomentshirt.html
+++ b/product page/productwomentshirt.html
@@ -27,11 +27,11 @@
 <div class="scbreadcumb">
     <a href="#">  Home  </a>
     <span>/</span>
-     <a href="#">Men</a>
+     <a href="#">Women</a>
      <span>/</span>
     <a href="#">Western Wear </a>
      <span>/</span>
-     <a href="#">Jackets & Coats </a>
+     <a href="#">Tshirts</a>
     </div>
 <!-- maindiv start -->
 <div class="scmaindiv">
@@ -64,7 +64,7 @@
 <div id="scgendercat">
 
 <input type="checkbox" name="Men" checked  id="">
-<label for="">Men(40)</label>
+<label for="">Women(40)</label>
 </div>
 <!-- gender finish -->
 <div class="screfineline"></div>
@@ -77,7 +77,7 @@
 <div id="sccatcat">
 
     <input type="checkbox" name="Jackets&Coats" checked  id="">
-    <label for="">Jackets&Coats(20)</label>
+    <label for="">Tshirts(20)</label>
     </div>
     <!-- category finish -->
 <div class="screfineline"></div>
@@ -124,33 +124,33 @@
 <div id="scbrandcat">
 
     <div>
-    <input type="checkbox" name="JOHN PLAYERS"  onclick="john(data)" id="">
-    <label for="">JOHN PLAYERS</label>
+    <input type="checkbox" name="Puma"  onclick="john(data)" id="">
+    <label for="">Puma</label>
     </div>
 
     <div>
-    <input type="checkbox" name="Campus Sutra"   onclick="campus(data)" id="">
-    <label for="">Campus Sutra</label>
+    <input type="checkbox" name="TOMMY HILFIGER"   onclick="campus(data)" id="">
+    <label for="">TOMMY HILFIGER</label>
     </div>
 
     <div>
-    <input type="checkbox" name="U.S. Polo Assn."  onclick="us(data)"  id="">
-    <label for="">U.S.Polo Assn.</label>
+    <input type="checkbox" name="Teamspirit"  onclick="us(data)"  id="">
+    <label for="">Teamspirit</label>
     </div>
 
     <div>
-    <input type="checkbox" name="T-Base"  onclick="tbase(data)"   id="">
-    <label for="">T-Base</label>
+    <input type="checkbox" name="ARMANI EXCHANGE"  onclick="tbase(data)"   id="">
+    <label for="">ARMANI EXCHANGE</label>
     </div>
 
     <div>
-    <input type="checkbox" name="Columbia"   onclick="columbia(data)"   id="">
-    <label for="">Columbia</label>
+    <input type="checkbox" name="FIG"   onclick="columbia(data)"   id="">
+    <label for="">FIG</label>
     </div>
 
     <div>
-    <input type="checkbox" name="NIKE"   onclick="nike(data)"    id="">
-    <label for="">NIKE</label>
+    <input type="checkbox" name="LEVIS"   onclick="nike(data)"    id="">
+    <label for="">LEVIS</label>
     </div>
 
 </div>
@@ -361,9 +361,9 @@
     <!-- selected category details -->
     <div class="scselectdetails">
 
-        <div class="scdetailshead">MEN'S</div>
-        <div class="scdetailssubhead">Jackets & Coats</div>
-        <div class="scdetailstotal"><p> Versatile and sophisticated, AJIO brings to you a wide range of coats and jackets for men. Be it printed, embroidered, ripped or distressed – we have everything. Browse through cool gilets, quilted bombers and winter jackets to keep your fashion game on fleek this cold season. Let the bad boy out to play with leather jackets or sharpen up your look with traditional men’s coats.</p></div>
+        <div class="scdetailshead">WOMEN'S</div>
+        <div class="scdetailssubhead">Tshirts</div>
+        <div class="scdetailstotal"><p>Funk up your style with our fashionable selection of tees! AJIO showcases stunning styles from vivid graphic prints to versatile geometric art, subtle florals to simple solid tees that are trendsetting collectibles from brands like Pantaloons, CHM and Puma.</p></div>
     </div>
 
 
