--- a/product page/productwomenjeans.html
+++ b/product page/productwomenjeans.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./productcss/product.css">
 
-    <title>Jackets & Coats</title>
+    <title>Women Jeans</title>
+    
 </head>
 <body>
     <div class="scprodhead">
@@ -27,11 +28,11 @@
 <div class="scbreadcumb">
     <a href="#">  Home  </a>
     <span>/</span>
-     <a href="#">Men</a>
+     <a href="#">Women</a>
      <span>/</span>
     <a href="#">Western Wear </a>
      <span>/</span>
-     <a href="#">Jackets & Coats </a>
+     <a href="#">Jeans & Jeggings</a>
     </div>
 <!-- maindiv start -->
 <div class="scmaindiv">
@@ -64,7 +65,7 @@
 <div id="scgendercat">
 
 <input type="checkbox" name="Men" checked  id="">
-<label for="">Men(40)</label>
+<label for="">Women(40)</label>
 </div>
 <!-- gender finish -->
 <div class="screfineline"></div>
@@ -77,7 +78,7 @@
 <div id="sccatcat">
 
     <input type="checkbox" name="Jackets&Coats" checked  id="">
-    <label for="">Jackets&Coats(20)</label>
+    <label for="">Jeans & Jeggings(20)</label>
     </div>
     <!-- category finish -->
 <div class="screfineline"></div>
@@ -124,33 +125,33 @@
 <div id="scbrandcat">
 
     <div>
-    <input type="checkbox" name="JOHN PLAYERS"  onclick="john(data)" id="">
-    <label for="">JOHN PLAYERS</label>
+    <input type="checkbox" name="LEVIS"  onclick="john(data)" id="">
+    <label for="">LEVIS</label>
     </div>
 
     <div>
-    <input type="checkbox" name="Campus Sutra"   onclick="campus(data)" id="">
-    <label for="">Campus Sutra</label>
+    <input type="checkbox" name="Outryt"   onclick="campus(data)" id="">
+    <label for="">Outryt</label>
     </div>
 
     <div>
-    <input type="checkbox" name="U.S. Polo Assn."  onclick="us(data)"  id="">
-    <label for="">U.S.Polo Assn.</label>
+    <input type="checkbox" name="DNMX"  onclick="us(data)"  id="">
+    <label for="">DNMX</label>
     </div>
 
     <div>
-    <input type="checkbox" name="T-Base"  onclick="tbase(data)"   id="">
-    <label for="">T-Base</label>
+    <input type="checkbox" name="ORCHID BLUES"  onclick="tbase(data)"   id="">
+    <label for="">ORCHID BLUES</label>
     </div>
 
     <div>
-    <input type="checkbox" name="Columbia"   onclick="columbia(data)"   id="">
-    <label for="">Columbia</label>
+    <input type="checkbox" name="DENIZEN WOMENS"   onclick="columbia(data)"   id="">
+    <label for="">DENIZEN WOMENS</label>
     </div>
 
     <div>
-    <input type="checkbox" name="NIKE"   onclick="nike(data)"    id="">
-    <label for="">NIKE</label>
+    <input type="checkbox" name="Dolce Crudo"   onclick="nike(data)"    id="">
+    <label for="">Dolce Crudo</label>
     </div>
 
 </div>
@@ -361,9 +362,9 @@
     <!-- selected category details -->
     <div class="scselectdetails">
 
-        <div class="scdetailshead">MEN'S</div>
-        <div class="scdetailssubhead">Jackets & Coats</div>
-        <div class="scdetailstotal"><p> Versatile and sophisticated, AJIO brings to you a wide range of coats and jackets for men. Be it printed, embroidered, ripped or distressed – we have everything. Browse through cool gilets, quilted bombers and winter jackets to keep your fashion game on fleek this cold season. Let the bad boy out to play with leather jackets or sharpen up your look with traditional men’s coats.</p></div>
+        <div class="scdetailshead">WOMEN'S</div>
+        <div class="scdetailssubhead">Jeans & Jeggings</div>
+        <div class="scdetailstotal"><p>Make a dramatic first impression with our stunning collection of jeans ranging from rugged ripped denims to old-school high waist ones, flattering skinny fits to stylish flared jeans. Here's our online wardrobe featuring brands like Levis, TALLY WEiJL and Recap that offer a blend of comfort and laidback style.</p></div>
     </div>
 
 
