--- a/product page/productjeans.html
+++ b/product page/productjeans.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../Main.css">
+    <link rel="icon" href="https://assets.ajio.com/static/img/favicon.ico" type="image/icon type">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    
+    <script
+      src="https://kit.fontawesome.com/d829865ea3.js"
+      crossorigin="anonymous"
+    ></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./productcss/product.css">
 
     <title>Jeans</title>
 </head>
 <body>
+
+    <div id="Nav_bar_main">
+    </div>
+
+    <div id="main">
+
     <div class="scprodhead">
     <div>
         <img src="/prodimg/bbs-image.svg" alt="Sale is Live">
@@ -413,11 +424,11 @@
 
 
 </div>
+</div>
+<footer></footer>
 </body>
 </html>
+<script type = "module" src = "../navbar.js"></script>
 <script src="jeans.js">
-     <link rel="stylesheet" href="./productcss/product.css"/>
 
-  
-    
 </script>
