--- a/product page/productwomenjeans.html
+++ b/product page/productwomenjeans.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="https://assets.ajio.com/static/img/favicon.ico" type="image/icon type">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="../Main.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    
+    <script
+      src="https://kit.fontawesome.com/d829865ea3.js"
+      crossorigin="anonymous"
+    ></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./productcss/product.css">
 
@@ -15,6 +20,12 @@
     
 </head>
 <body>
+
+    <div id="Nav_bar_main">
+    </div>
+
+    <div id="main">
+
     <div class="scprodhead">
     <div>
         <img src="/prodimg/bbs-image.svg" alt="Sale is Live">
@@ -414,8 +425,10 @@
 
 
 </div>
+</div>
+<footer></footer>
 </body>
 </html>
+<script type = "module" src = "../navbar.js"></script>
 <script src="womenjeans.js">
-     <link rel="stylesheet" href="./productcss/product.css"/>   
 </script>
