--- a/Home/index.html
+++ b/Home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../Home/Images/title logo.png" type="image/icon type">
+    <link rel="icon" href="https://assets.ajio.com/static/img/favicon.ico" type="image/icon type">
     <link rel="stylesheet" href="../Main.css">
     <script
       src="https://kit.fontawesome.com/d829865ea3.js"
@@ -83,6 +83,9 @@
           </div>
         </div>
       </div>
+
+
+      
 
       <div class="sameimgsamdiv sameimgheading"></div>
 
