--- a/product page/productjeans.html
+++ b/product page/productjeans.html
@@ -425,6 +425,22 @@
 
 </div>
 </div>
+
+
+<div id="icon_div">
+    <div class="icons">
+      <i class="fas fa-shopping-bag"></i>
+      <p>EASY EXCHANGE</p>
+    </div>
+    <div class="icons">
+      <i class="fas fa-hand-holding-heart"></i>
+      <p>100% HANDPICKED</p>
+    </div>
+    <div class="icons">
+      <i class="far fa-check-circle"></i>
+      <p>ASSURED QUALITY</p>
+    </div>
+  </div>
 <footer></footer>
 </body>
 </html>
