--- a/mybag/cart.html
+++ b/mybag/cart.html
@@ -7,7 +7,7 @@
     <div id="div1">
         <img src="mybagbanner.jpg">
     </div>
-<div id="dflex">
+<!-- <div id="dflex">
         <div id="div2">
             <div id="idiv1">
                 <span id="span1">My Bag</span>
@@ -20,8 +20,8 @@
     <div id="div3">
             <div id="idiv3"></div>
             <div id="idiv4">PROCEED TO SHIPPING</div>
-            <!-- <div id="idiv4">PROCEED TO SHIPPING</div> -->
-    </div>
+            
+    </div> -->
 </div>
 </body>
 </html>
