--- a/mybag/cart1.html
+++ b/mybag/cart1.html
@@ -1,34 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   
-    <style>
-        #maindiv{
-            display: flex;
-            height:200px;
-            width:80%;
-            border:1px solid red;
-            margin-top: 30px;
-        }
-        #div1{
-            border:1px solid green;
-        }
-        #div2{
-            border:1px solid blue;
-        }
-        #div3{
-            border:1px solid yellow;
-        }
-        #span2{
-            cursor: pointer;
-        }
-    </style>
-</head>
-<body>
 
-    <a href="./women jeans/jeans.jpg"></a>
+<head>
+<link href="cart.css" rel="stylesheet">
+</head>
+
+<body>
     
+    <div id="odiv">
+        <img id="img1" src="mybagbanner.jpg">
+    </div>
+    
+    <div id="bag">
+        <div id="Mybag">My Bag</div>
+        <div id="Closet">+ Add From Closet</div>
+    </div>
+
 </body>
+
 </html>
 <script src="cart.js">
 
