--- a/Home/index.html
+++ b/Home/index.html
@@ -32,25 +32,25 @@
       </div>
 
      
-      <div id="first_section">
+      <div id="first_section" onclick="gotomen()">
         <div class="frist_section_img sameimgsamdiv">
           <img src="../Home/Images/fiest section.jpg" alt="" />
         </div>
       </div>
 
-      <div id="Second_section">
+      <div id="Second_section" onclick="gotowoen()">
         <div class="Second_section_img sameimgsamdiv">
           <img src="../Home/Images/second section.jpg" alt="" />
         </div>
       </div>
 
-      <div id="Third_section">
+      <div id="Third_section" onclick="gotowoen()">
         <div class="Third_section_img sameimgsamdiv">
           <img src="../Home/Images/third section.jpg" alt="" />
         </div>
       </div>
 
-      <div id="Four_section">
+      <div id="Four_section" onclick="gotomen()">
         <div class="Four_section_img sameimgsamdiv">
           <img src="../Home/Images/Fous section/1.jpg" alt="" />
         </div>
@@ -59,9 +59,9 @@
         </div>
       </div>
 
-      <div class="sameimgsamdiv sameimgheading"></div>
+      <div class="sameimgsamdiv sameimgheading" onclick="gotomen()"></div>
 
-      <div id="sixth_silder">
+      <div id="sixth_silder" onclick="gotowoen()">
         <div class="Sixth_silder_div single-item">
           <div class="silder_no_hover">
             <img src="../Home/Images/sic the section slider/1.jpg" alt="" />
@@ -87,9 +87,9 @@
 
       
 
-      <div class="sameimgsamdiv sameimgheading"></div>
+      <div class="sameimgsamdiv sameimgheading" onclick="gotowoen()"></div>
 
-      <div id="Eight_silder">
+      <div id="Eight_silder " onclick="gotomen()">
         <div class="Eight_silder_div single-item">
           <div class="silder_no_hover">
             <img src="../Home/Images/eight Section Silder/1.jpg" alt="" />
@@ -103,9 +103,9 @@
         </div>
       </div>
 
-      <div class="sameimgsamdiv sameimgheading"></div>
+      <div class="sameimgsamdiv sameimgheading" onclick="gotowoen()"></div>
 
-      <div id="Ten_silder">
+      <div id="Ten_silder" onclick="gotowoen()">
         <div class="Sixth_silder_div Ten">
           <div class="silder_no_hover">
             <img src="../Home/Images/tenth Section Silder/1.jpg" alt="" />
@@ -128,11 +128,11 @@
         </div>
       </div>
 
-      <div class="Show_the_space"></div>
+      <div class="Show_the_space" onclick="gotomen()"></div>
 
-      <div class="sameimgsamdiv sameimgheading"></div>
+      <div class="sameimgsamdiv sameimgheading" onclick="gotowoen()"></div>
 
-      <div id="section_11" class="Fous_img_inDiv">
+      <div id="section_11" class="Fous_img_inDiv" onclick="gotomen()">
         <div class="section_11_img sameimgsamdiv">
           <img src="../Home/Images/11 Section/1.webp" alt="" />
         </div>
@@ -147,20 +147,20 @@
         </div>
       </div>
 
-      <div class="Show_the_space"></div>
+      <div class="Show_the_space" onclick="gotowoen()"></div>
 
-      <div class="sameimgsamdiv sameimgheading"></div>
+      <div class="sameimgsamdiv sameimgheading" onclick="gotowoen()"></div>
 
-      <div id="section12">
+      <div id="section12" onclick="gotowoen()">
         <div class="section12 sameimgsamdiv">
           <img src="../Home/Images/12.webp" alt="" />
         </div>
       </div>
 
-      <div class="Show_the_space"></div>
-      <div class="sameimgsamdiv sameimgheading"></div>
+      <div class="Show_the_space" onclick="gotomen()"></div>
+      <div class="sameimgsamdiv sameimgheading" onclick="gotowoen()"></div>
 
-      <div id="section_13 " class="Fous_img_inDiv">
+      <div id="section_13 " class="Fous_img_inDiv" onclick="gotowoen()">
         <div class="section_13_img sameimgsamdiv">
           <img src="../Home/Images/13section/1.jpg" alt="" />
         </div>
@@ -177,10 +177,10 @@
 
 
 
-      <div class="Show_the_space"></div>
-      <div class="sameimgsamdiv sameimgheading"></div>
+      <div class="Show_the_space" onclick="gotomen()"></div>
+      <div class="sameimgsamdiv sameimgheading" onclick="gotowoen()"></div>
     </div>
-    <div id="silder_14_section">
+    <div id="silder_14_section" onclick="gotomen()">
         <div class="silder_14_section_silder_div Ten">
           <div class="silder_no_hover">
             <img src="../Home/Images/14Section Img Silder/1.webp" alt="" />
@@ -207,10 +207,10 @@
 
 
 
-    <div class="Show_the_space"></div>      
-    <div class="sameimgsamdiv sameimgheading"></div>
+    <div class="Show_the_space" onclick="gotomen()"></div>      
+    <div class="sameimgsamdiv sameimgheading" onclick="gotowoen()"></div>
     </div>
-    <div id="section15">
+    <div id="section15" onclick="gotomen()">
         <div class="section15 sameimgsamdiv">
           <img src="../Home/Images/15section img/1.webp" alt="" />
         </div>
@@ -221,7 +221,7 @@
 
       <div class="Show_the_space"></div>      
       <div class="sameimgsamdiv sameimgheading"></div>
-    <div id="section_16" class="arrowsSilder">
+    <div id="section_16" class="arrowsSilder" onclick="gotowoen()">
       <div class="Section_16_silder Section_arrows_silder responsive">
         <div class="silder_no_hover">
           <img src="../Home/Images/16 Secion silder img/1.webp" alt="">
@@ -249,16 +249,16 @@
 
 
 
-    <div class="Show_the_space"></div>      
+    <div class="Show_the_space" onclick="gotomen()"></div>      
       <div class="sameimgsamdiv sameimgheading"></div>
 
-      <div id="section_17">
+      <div id="section_17" onclick="gotomen()" onclick="gotowoen()">
         <div class="section_17 sameimgsamdiv">
           <img src="../Home/Images/17 section img.webp" alt="" />
         </div>
       </div>
 
-      <div id="section__17" class="arrowsSilder">
+      <div id="section__17" class="arrowsSilder" onclick="gotomen()">
         <div class="Section_16_silder Section_arrows_silder responsive">
           <div class="silder_no_hover">
             <img src="../Home/Images/17 sectin silder/1.jpg" alt="">
@@ -280,7 +280,7 @@
 
 
 
-      <div class="Show_the_space"></div>      
+      <div class="Show_the_space" onclick="gotomen()" onclick="gotowoen()"></div>      
       <div class="sameimgsamdiv sameimgheading"></div>
       <div id="section18">
         <div class="section18 sameimgsamdiv">
@@ -304,10 +304,10 @@
 
 
 
-      <div class="Show_the_space"></div>      
-      <div class="sameimgsamdiv sameimgheading"></div>   
+      <div class="Show_the_space" onclick="gotomen()"></div>      
+      <div class="sameimgsamdiv sameimgheading" onclick="gotowoen()"></div>   
 
-      <div id="section_19">
+      <div id="section_19" onclick="gotomen()">
         <div class="section_19 Ten">
           <div class="silder_no_hover">
             <img src="../Home/Images/19  section slider/1.webp" alt="" />
@@ -323,7 +323,7 @@
           </div>
         </div>
       </div>
-      <div id="section__19" class="arrowsSilder">
+      <div id="section__19" class="arrowsSilder" onclick="gotowoen()">
         <div class="Section_19_silder Section_arrows_silder responsive">
           <div class="silder_no_hover">
             <img src="../Home/Images/20 sectio slider/1.webp" alt="">
@@ -345,14 +345,14 @@
 
 
 
-      <div class="Show_the_space"></div>      
+      <div class="Show_the_space" onclick="gotomen()"></div>      
       <div class="sameimgsamdiv sameimgheading"></div>   
-      <div id="section21">
+      <div id="section21" onclick="gotomen()">
         <div class="section18 sameimgsamdiv">
           <img src="../Home/Images/21.webp" alt="" />
         </div>
       </div>
-      <div class="section_21" class="Fous_img_inDiv">
+      <div class="section_21" class="Fous_img_inDiv" onclick="gotomen()">
         <div class="sameimgsamdiv">
           <img src="../Home/Images/lastsection22/1.webp" alt="" />
         </div>
@@ -364,7 +364,7 @@
         </div>
 
       </div>
-      <div class="section_21" class="Fous_img_inDiv">
+      <div class="section_21" class="Fous_img_inDiv" onclick="gotomen()">
         <div class="section_13_img sameimgsamdiv">
           <img src="../Home/Images/lastsection22/4.webp" alt="" />
         </div>
@@ -376,7 +376,7 @@
         </div>
 
       </div>
-      <div class="section_21" class="Fous_img_inDiv">
+      <div class="section_21" class="Fous_img_inDiv" onclick="gotowoen()">
         <div class="section_13_img sameimgsamdiv">
           <img src="../Home/Images/lastsection22/7.webp" alt="" />
         </div>
@@ -391,8 +391,8 @@
         </div>
       </div>
 
-      <div class="Show_the_space"></div>      
-      <div id="section23">
+      <div class="Show_the_space" onclick="gotomen()"></div>      
+      <div id="section23" onclick="gotomen()">
         <div class="section23 sameimgsamdiv">
           <img src="../Home/Images/last img.webp" alt="" />
         </div>
